--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navigation">
-        <a href="">Lobe</a>
-        <div class="innav">
-          <a href="blog.html">Examples</a>
-          <a href="index.html">Tour</a>
+    <div class="navbar-container">
+      <nav class="navbar">
+        <div class="navigation">
+          <a href="">Lobe</a>
+          <div class="innav">
+            <a class="i1" href="blog.html">Tour</a>
+            <a href="index.html">Blog</a>
+          </div>
+          <button>Download</button>
         </div>
-        <button>Download</button>
-      </div>
-    </nav>
+      </nav>
+    </div>
     <section class="main">
       <div class="sm1">
         <div class="smp1">
