--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lobe | Tour</title>
     <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="responsive1.css" />
   </head>
   <body>
     <div class="navbar-container">
@@ -31,7 +32,11 @@
         </p>
       </div>
       <div class="sm2">
-        <img src="/images/pexels-cottonbro-studio-6153354.jpg" alt="" />
+        <img
+          src="/images/pexels-cottonbro-studio-6153354.jpg"
+          alt=""
+          class="blur"
+        />
         <h1>
           Train your app <br />
           with Lobe
