--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lobe | Blog</title>
     <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="responsive2.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
   </head>
   <body>
     <div class="navbar-container">
@@ -14,6 +19,13 @@
           <div class="innav">
             <a href="index.html">Tour</a>
             <a href="blog.html">Blog</a>
+          </div>
+          <div class="dropdown-container">
+            <a href=""><span class="material-symbols-outlined"> menu </span></a>
+            <div class="dropdown-content">
+              <a class="i1" href="index.html">Tour</a>
+              <a href="blog.html">Blog</a>
+            </div>
           </div>
           <button>Download</button>
         </div>
