--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Lobe | Tour</title>
     <link rel="stylesheet" href="style1.css" />
     <link rel="stylesheet" href="responsive1.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
   </head>
   <body>
     <div class="navbar-container">
@@ -13,8 +17,15 @@
         <div class="navigation">
           <a href="">Lobe</a>
           <div class="innav">
-            <a class="i1" href="blog.html">Tour</a>
-            <a href="index.html">Blog</a>
+            <a class="i1" href="index.html">Tour</a>
+            <a href="blog.html">Blog</a>
+          </div>
+          <div class="dropdown-container">
+            <a href=""><span class="material-symbols-outlined"> menu </span></a>
+            <div class="dropdown-content">
+              <a class="i1" href="index.html">Tour</a>
+              <a href="blog.html">Blog</a>
+            </div>
           </div>
           <button>Download</button>
         </div>
