--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
       <div class="sm2">
         <div class="sm2div">
           <img
-            src="/images/pexels-cottonbro-studio-5473956.jpg"
+            src="/images/pexels-cottonbro-studio-5473956.JPG"
             alt=""
             class="blur"
           />
@@ -57,7 +57,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8386365.jpg"
+            src="images/pexels-tara-winstead-8386365.JPG"
             alt=""
             class="blur"
           />
@@ -70,7 +70,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8849295.jpg"
+            src="/images/pexels-tara-winstead-8849295.JPG"
             alt=""
             class="blur"
           />
@@ -82,7 +82,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8386423.jpg"
+            src="/images/pexels-tara-winstead-8386423.JPG"
             alt=""
             class="blur"
           />
@@ -94,7 +94,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-cottonbro-studio-5473956.jpg"
+            src="/images/pexels-cottonbro-studio-5473956.JPG"
             alt=""
             class="blur"
           />
@@ -106,7 +106,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8386365.jpg"
+            src="/images/pexels-tara-winstead-8386365.JPG"
             alt=""
             class="blur"
           />
@@ -118,7 +118,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8849295.jpg"
+            src="/images/pexels-tara-winstead-8849295.JPG"
             alt=""
             class="blur"
           />
@@ -130,7 +130,7 @@
         </div>
         <div class="sm2div">
           <img
-            src="/images/pexels-tara-winstead-8386423.jpg"
+            src="/images/pexels-tara-winstead-8386423.JPG"
             alt=""
             class="blur"
           />
