--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           <p class="sm1p2">Tour</p>
         </div>
         <p class="smp2">
-          Build your first machine learning model in ten <br />
-          minutes. No code or experience required.
+          Build your first machine learning model in ten minutes. No code or
+          experience required.
         </p>
       </div>
       <div class="sm2">
         <img
-          src="/images/pexels-cottonbro-studio-6153354.jpg"
+          src="/images/pexels-cottonbro-studio-6153354.JPG"
           alt=""
           class="blur"
         />
