--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="sm2">
         <img
-          src="./images/pexels-cottonbro-studio-6153354.JPG"
+          src="images/pexels-cottonbro-studio-6153354.JPG"
           alt=""
           class="blur"
         />
